# monefy

./: .gitignore  README.md  __init__.py  pyproject.toml
monefy/: download.py  preprocessing.py
monefy/cli/: __init__.py
monefy/cli/formatter/: __init__.py  format.py
